5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1601_1800.log
== TEST (2019-04-03 18:12:34) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
r=(a**2+b**2+c**2)/(a+b+c)
print(round(r,n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(r,n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:13:04) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
r=(a**2+b**2+c**2)/(a+b+c)
print(round(r*n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(r*n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:13:32) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
r=(a**2+b**2+c**2)/(a+b+c)
print(r,n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(r,n)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:13:58) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
r=(a**2+b**2+c**2)/(a+b+c)
print(round(r,n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(r,n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:14:06) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
r=(a**2+b**2+c**2)/(a+b+c)
print(round(r,5))
-- OUTPUT:
25.66667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:14:16) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
r=(a**2+b**2+c**2)/(a+b+c)
print(round(r,5))
-- EXECUTION TIME:
0.183169
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.66667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.15094
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:14:29) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
r=(a**2+b**2+c**2)/(a+b+c)
print(round(r,2))
-- OUTPUT:
25.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:14:36) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
r=(a**2+b**2+c**2)/(a+b+c)
print(round(r,2))
-- EXECUTION TIME:
0.172683
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.67
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.87
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:14:47) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
r=(a**2+b**2+c**2)/(a+b+c)
print(round(r,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:14:53) 
-- CODE:
a=float(input("variavel a:"))
b=float(input("variavel b:"))
c=float(input("variavel c:"))
r=(a**2+b**2+c**2)/(a+b+c)
print(round(r,7))
-- EXECUTION TIME:
0.185369
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
